helm-chart/examples/gateway-api/namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stag01
  labels:
    shared-gateway-access: "true"
