helm-chart/examples/gateway-api/job-aggregator-shared-gateway-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: job-aggregator
  namespace: stag01
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-monitoring-gateway
      namespace: monitoring
  hostnames:
    - job-aggregator.cluster.home.tlta.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /job-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - kind: Service
          name: stag01-rollout-job-aggregator-job-api
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /candidate-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - kind: Service
          name: stag01-rollout-job-aggregator-candidate-api
          port: 8100

    - matches:
        - path:
            type: PathPrefix
            value: /crawler-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - kind: Service
          name: stag01-rollout-job-aggregator-crawler-api
          port: 8200

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: stag01-rollout-job-aggregator-ui-web
          port: 8080
